# xfce-hosts-plugin

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
hosts-plugin/: Makefile.am  hosts-dialogs.c  hosts-dialogs.h  hosts.c  hosts.desktop  hosts.desktop.in  hosts.h  org.xfce.xfce-hosts-plugin.policy
